[package]
name = "crypto"
version = "0.1.0"
authors = ["Band Protocol <dev@bandprotocol.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
owasm-kit = { version = "0.1.13" }
wasm-bindgen = "0.2.63"
obi = { version = "0.0.2" }
lazy_static = "1.4.0"
transpose = "0.2.0"
strum = "0.21"
strum_macros = "0.21"
owasm2 = { version = "0.1.8"}